crates/pg_syntax/tests/snapshots/postgres_regress/point@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_seqscan TO false;
---
VariableSetStmt@0..28
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..18 "enable_seqscan"
  Whitespace@18..19 " "
  To@19..21 "TO"
  Whitespace@21..22 " "
  AConst@22..27
    FalseP@22..27 "false"
  Ascii59@27..28 ";"

