crates/pg_syntax/tests/snapshots/postgres_regress/point@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_indexscan TO true;
---
VariableSetStmt@0..29
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..20 "enable_indexscan"
  Whitespace@20..21 " "
  To@21..23 "TO"
  Whitespace@23..24 " "
  AConst@24..28
    TrueP@24..28 "true"
  Ascii59@28..29 ";"

