crates/pg_syntax/tests/snapshots/postgres_regress/point@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_bitmapscan TO true;
---
VariableSetStmt@0..30
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "enable_bitmapscan"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..29
    TrueP@25..29 "true"
  Ascii59@29..30 ";"

